--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@ a.mail {
                             <li>
                                 <div class="search">
                                     <form>
-                                        <input type="search" placeholder="Email Address">
+                                        <input type="search" placeholder="Enter keyword...">
                                     </form>
                                 </div>
                             </li>
