--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
     font-weight: bolder;
     font-size: 17px;
 }
+input[type="search"] {
+    border-radius: 33px;
+    width: 220px;
+    height: 35px;
+    border: 3px solid whitesmoke;
+    padding: 15px;
+    margin-top: -10px;
+    /* margin-left: 11px; */
+}
 i.fa-solid.fa-moon {
     color: black;
     font-size: 25px;
