--- a/index.html
+++ b/index.html
@@ -8,6 +8,34 @@
             *{
                 box-sizing: border-box;
             }
+            form{
+        display: flex;
+     }    
+            .head input[type="search"] {
+    
+    border-radius: 30px 0 0 30px;
+    padding: 8px 15px;
+    /* margin-bottom: 14px; */
+    margin-top: -11px;
+    border: 2px solid whitesmoke;
+    height: 43px;
+}
+i.fas.fa-search {
+    font-size: 18px;
+    margin-left: 8px;
+}
+.searchbtn {
+    background-color: mediumseagreen;
+    /* border-radius: 7px; */
+    border-radius: 0 30px 30px 0;
+    box-shadow: none;
+    padding: 13px 11px;
+    font-size: 15px;
+    margin-top: -11px;
+    height: 43px;
+}
+
+
             .row.headlists {
     justify-content: space-between;
     margin-bottom: -23px;
@@ -531,6 +559,9 @@ a.mail {
                                 <div class="search">
                                     <form>
                                         <input type="search" placeholder="Enter keyword...">
+                                        <div class="searchbtn">
+                                            <i class="fas fa-search"></i>
+                                           </div>
                                     </form>
                                 </div>
                             </li>
