--- a/index.html
+++ b/index.html
@@ -884,7 +884,7 @@ a.mail {
        <div class="section footlist">
         <div class="container foot">
             <div class="row footer">
-                <div class="col footlist">
+                <div class="col footlist london">
                    <p> 10001 Alleghany st, 5th
                     Avenue, 235 Terry,
                     London.</p>
@@ -893,7 +893,7 @@ a.mail {
 
                 </div>
 
-                <div class="col footlist">
+                <div class="col footlist phone">
                     <h3>Phone</h3>
                     <p class="number">+1(21) 112 7368</p>
                     <br><br><br>
@@ -901,7 +901,7 @@ a.mail {
                     <a href="" class="mail">photogenic@mail.com</a>
                 </div>
 
-                <div class="col footlist">
+                <div class="col footlist links">
                     <h3>Support Links</h3>
                     <ul>
                         <li>Privacy Policy</li>
@@ -911,7 +911,7 @@ a.mail {
                     </ul>
                 </div>
      
-                <div class="col footlist">
+                <div class="col footlist sub">
                     <h3>Subscribe Here</h3>
                     <div class="search">
                         <form>
