--- a/index.html
+++ b/index.html
@@ -918,6 +918,9 @@ a.mail {
                             <input type="search" placeholder="Email Address">
                         </form>
                     </div>
+                   <p class="subcontent">
+                    Subscribe to our mailing list and get updates to your email inbox.
+                   </p>
                 </div>
             </div>
         </div>
