--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ i.fas.fa-search {
 }
 .container.head {
     margin-top: -90px;
+    padding-right: 0px;
 }
 .col.laundry h2 {
     font-size: 35px;
@@ -83,7 +84,7 @@ i.fa-solid.fa-moon {
     display: flex;
     justify-content: end;
     
-    margin-right: -50px;
+    margin-right: -18px;
 }
 .section.headlist {
     margin-bottom: -97px;
