--- a/index.html
+++ b/index.html
@@ -481,9 +481,12 @@ a.order {
     font-weight: bolder;
     color: black;
     background-color: white;
-    padding: 9px;
-    margin-right: 15px;
-    border-radius: 100%;
+    padding-top: 12px;
+    padding-left: 14px;
+    margin-right: 10px;
+    border-radius: 50%;
+    width: 38px;
+    height: 38px;
 }
 .col.logos {
     box-shadow: none;
